@@ -63,7 +63,6 @@ PROJ_DLL 	= proj$(VERSION).dll
 PROJ_EXE    = proj.exe
 CS2CS_EXE   = cs2cs.exe
 GEOD_EXE    = geod.exe
-NAD2NAD_EXE = nad2nad.exe
 NAD2BIN_EXE = nad2bin.exe
 
 CFLAGS	=	/nologo -I. -DPROJ_LIB=\"$(PROJ_LIB_DIR)\" \
@@ -72,8 +71,6 @@ CFLAGS	=	/nologo -I. -DPROJ_LIB=\"$(PROJ_LIB_DIR)\" \
 default:	all
 
 all: proj.lib $(PROJ_EXE) $(CS2CS_EXE) $(GEOD_EXE) $(NAD2BIN_EXE)
-
-# Disabled: $(NAD2NAD_EXE)
 
 proj.lib:	$(LIBOBJ)
 	if exist proj.lib del proj.lib
@@ -97,9 +94,6 @@ $(CS2CS_EXE):	$(CS2CSEXE_OBJ) $(EXE_PROJ)
 $(GEOD_EXE):	$(GEODEXE_OBJ) $(EXE_PROJ)
 	cl $(GEODEXE_OBJ) $(EXE_PROJ)
 	if exist $(GEOD_EXE).manifest mt -manifest $(GEOD_EXE).manifest -outputresource:$(GEOD_EXE);1
-
-$(NAD2NAD_EXE):	nad2nad.obj emess.obj $(EXE_PROJ)
-	cl nad2nad.obj emess.obj $(EXE_PROJ)
 
 $(NAD2BIN_EXE):	nad2bin.obj emess.obj $(EXE_PROJ)
 	cl nad2bin.obj emess.obj $(EXE_PROJ)
